added flask server

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,4 @@ services:
     build: .
     entrypoint: ./entrypoint.sh
     network_mode: "host"
-    deploy:
-      resources:
-        reservations:
-          devices:
-            - driver: nvidia
-              count: 1
-              capabilities: [ gpu ]
+    runtime: nvidia
